# cloth-sim

./: CMakeLists.txt
include/: window.h
include/math/: mat4.h  matrix.h  vec.h  vec3.h
src/: main.cpp  window.cpp
src/math/: mat4.cpp  vec3.cpp
